--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
 </head>
 <body>
 
+  <!-- header and navbar section  start -->
   <header>
-    <nav id="navbar">
-      <ul>
-        <li><a href="#welcome-section">About</a></li>
-        <li><a href="#projects">Work</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+    <div class="header-wrapper">
+      <div class="logo">
+        <a href="/"><img src="images/coding.svg" alt=""></a>
+      </div>
+      <input id="toggle-menu" type="checkbox">
+      <label for="toggle-menu"><i class="fas fa-bars"></i></label>
+      <nav id="navbar">
+        <ul>
+          <li><a href="#welcome-section">About</a></li>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+  <!-- header and navbar section end -->
 
+  <!-- main section start -->
   <main>
 
     <section id="welcome-section">
@@ -96,7 +106,9 @@
       </div>
     </section>
   </main>
+  <!-- main section end -->
 
+  <!-- footer section start -->
   <footer>
     <p>The purpose of this portfolio it's only to show you my work.</p>
     
@@ -105,5 +117,7 @@
       <a href="https://github.com/Cesar-rdgz">Cesar Rodriguez</a>
     </p>
   </footer>
+  <!-- footer section start -->
+
 </body>
 </html>
