--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
         <div class="slide slider1">
           <div class="slide-content">
             <div class="container">
-              <h1 class="title-animated">¿Con qué tipo de proyecto necesitas ayuda?</h1><br/>
+              <h1 class="title-animated">Desarrollo de páginas web bien hechas</h1>
+              <br/>
+              <p>¿Con qué tipo de proyecto necesitas ayuda?</p>
                 <div class="links-container p-animated">
                   <div class="projects">
                     <a href="#"><h2>Desarrollo de sitios web</h2></a>
@@ -147,6 +149,10 @@
           </figure>
         </div>
       </div>
+    </section>
+
+    <section class="main-content">
+      
     </section>
     
     <!--<section id="projects">
