--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <p>¿Con qué tipo de proyecto necesitas ayuda?</p>
                 <div class="links-container p-animated">
                   <div class="projects">
-                    <a href="#"><h2>Desarrollo de sitios web</h2></a>
+                    <a id="webdev" href="#websites"><h2>Desarrollo de sitios web</h2></a>
                     <img class="project-icon" src="images/world-wide-web.svg" alt="">
                   </div>
                   <div class="projects">
@@ -112,6 +112,23 @@
 
       <div id="arrow-right" class="arrow"></div>
     </section>
+
+    <!-- main content Start -->
+
+    <section id="websites" class="hideContent">
+      <p class="sub-titles">Adquiere clientes potenciales a través de una página web…</p>
+      <p>“¿Quiero comercializar mi empresa en internet, pero ¿Cómo empiezo, cómo lo hago?” Un cliente me preguntó recientemente. Bueno… lo primero que respondí fue una página web para empezar.</p>
+      <p>La realidad es que muchos empiezan con una página de Facebook, lo cuál esta bien, pero…</p>
+      <p>...permíteme decirte que una página web es la "base de operaciones" de tu campaña de marketing online.</p>
+      <h3 class="sub-titles">una página web bien hecha que atraiga clientes potenciales.</h3>
+      <p>Ahora bien, tal ves tengas la duda de para que sirve una página web o porque tu empresa o negocio necesita una página web.</p>
+      <p>En primer lugar, una página web te posiciona como un experto en tu campo… a tu negocio… o a tu empresa, llevando clientes potenciales hacia ti, siempre y cuando tengas una web bien hecha.</p>
+      <p>Las características de una web bien hecha son muchas y aquí solo te mencionare que una de las más importantes es que sea responsive o adaptable a teléfonos celulares o tablets.</p>
+      <p>Bien, en definitiva una página web funciona para obtener clientes potenciales.</p>
+      <p>Si quieres saber que incluir o como es el proceso de hacer un sitio web que genere clientes potenciales, descarga mi ebook gratuito aquí abajo</p>
+    </section>
+
+    <!-- main content Start -->
 
     <section id="my-works" class="slideshow">
       <p class="title-works">Mis ultimos trabajos</p>
