--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                     <img class="project-icon" src="images/world-wide-web.svg" alt="">
                   </div>
                   <div class="projects">
-                    <a href="#"><h2>Optimización de busquedas</h2></a>
+                    <a id="seo" href="#seo-content"><h2>Optimización de busquedas</h2></a>
                     <img class="project-icon" src="images/seo.svg" alt="">
                   </div>
                   <div class="projects">
-                    <a href="#"><h2>Publicidad por internet</h2></a>
+                    <a id="ads-content" href="#ads"><h2>Publicidad por internet</h2></a>
                     <img class="project-icon" src="images/ads.svg" alt="">
                   </div>
                 </div>
@@ -126,6 +126,39 @@
       <p>Las características de una web bien hecha son muchas y aquí solo te mencionare que una de las más importantes es que sea responsive o adaptable a teléfonos celulares o tablets.</p>
       <p>Bien, en definitiva una página web funciona para obtener clientes potenciales.</p>
       <p>Si quieres saber que incluir o como es el proceso de hacer un sitio web que genere clientes potenciales, descarga mi ebook gratuito aquí abajo</p>
+    </section>
+
+    <section id="seo-content" class="hideContent">
+      <p class="sub-titles">¿Sabes como aumentar el tráfico de tu página web?</p>
+      <p>Si escuchaste bien… el tráfico de tu página web, ¿creias que solo con realizar tu página ponerla en linea, compartirla con tus familiares o en tu página de facebook comenzarias a ver nuevos prospectos?</p>
+      <p>Bueno… nada más alejado de la realidad… y bien, ¿cuál es la realidad?</p>
+      <p>verás, el comienzo de tu exposición en internet comienza aquí después de una página web, la cuál es la “base de operaciones” de toda tu campaña de mercadeo en internet.</p>
+      <p>Con tu página web puedes hacer muchas cosas, pero la más importante es la creación de contenido que en ultimo lugar aumenta tus posiciones en los buscadores especialmente en google.</p>
+      <h3 class="sub-titles">Posicionamiento orgánico</h3>
+      <p>Si tu ya tienes una página web el contenido de tu página (con una buena optimización) es el encargado de decirle al buscador (google, yahoo, etc...) para que búsquedas mostrar tu página web.</p>
+      <p>A esto se le llama posicionamiento orgánico, ayudar a los buscadores a comprender tu página para que "gratuitamente" la página de tu empresa o negocio este en las primeras posiciones.</p>
+      <p>¿Sabias que al día en un minuto se realizan 4.497.420 de búsquedas en Google? Si estas interesado en hacer que la página web de tu negocio o empresa aproveche estas búsquedas en Google, puedes ponerte en contacto conmigo y hablar de tu proyecto.</p>
+      <p>O bien, si deseas comprender a fondo de que va todo esto del SEO (search engine optimization, optimización en motores de búsqueda) y la creación de contenidos y como pueden ayudar a generar clientes potenciales para tu empresa o negocio… descarga este Ebook gratuito.</p>
+    </section>
+
+    <section id="ads" class="hideContent">
+      <p class="sub-titles">Aumenta el tráfico y ventas de tu sitio web.</p>
+      <p>Tal vez parece una declaración muy fuerte. Pero aquí estan los datos.</p>
+      <p>A diferencia de la optimización en buscadores de una página web, utilizar los servicios de Google Adwords (anuncios pagados de Google) aumenta el tráfico rápidamente, esto es así porque tu página aparece de inmediato en la primera posición.</p>
+      <p>Tan buena como es la optimización para aumentar el tráfico de tu web, esta estrategia toma su tiempo, por otro lado la acción de Google AdWords es instantánea.</p>
+      <p>Esto lo convierte en una buena opción para ofertas y promociones de tiempo limitado, aunque hay mucho más beneficios como los siguientes:</p>
+      <h3 class="sub-titles">Algunos beneficios de campañas de Google AdWords.</h3>
+      <dl class="concepts">
+        <dt>Convertir la inversión en un mejorador del tráfico de una forma rápida.</dt>
+        <dd>En la era de hoy hay que darle al cliente lo que pide… y lo primordial en la era de la información es que el cliente o consumir necesita información.<br/>
+        Si tu estas dispuesto a escuchar a tu cliente ideal y educarlo respecto a tus productos o servcios con transparencia y honestidad, el tráfico que has pagado se convertira en un fan de tu contenido y de tu empresa.</dd><br/>
+        <dt>Medición de los resultados de tu campaña de una forma muy precisa.</dt>
+        <dd>La época en que hacer publicidad de un negocio o empresa y no conocer su rentabilidad ha terminado… a al menos si asi lo quieres.<br/>
+        Al realizar una campaña de Google Adwords se hace de la mano de otra herramienta de Google (Google Analytics) lo que permite ver con claridad a quienes atraen nuestra publicidad, como se comportan en nuestro sitio web y que mejoras hay que hacer para obtener aún mejores resultados. </dd><br/>
+        <dt>Optimización al día sobre mejoras y cambios de dirección de la compaña.</dt>
+        <dd>Para empezar como su nombre lo dice campañas de PPC (pay-per-click) pago por click, unicamente pagas cuando alguien toma acción cuando alguien es dirigido a tu sitio web.<br/>
+        Además estas campañas permiten hacer pruebas A/B y calcular que tipo de anuncio o el mensaje es más adecuado para obtener más rendimiento.</dd>
+      </dl> 
     </section>
 
     <!-- main content Start -->
