--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a id="showWorks" href="#my-works">Trabajos</a></li>
         </ul>
         <ul>
-          <li><a id="contact-bottom" href="#contact">Contacta me</a></li>
+          <li><a id="contact-bottom" href="#contact">Contactame</a></li>
         </ul>
       </nav>
     </div>
@@ -68,10 +68,10 @@
         <div class="slide slider1">
           <div class="slide-content">
             <div class="container">
-              <h1 class="title-animated">Desarrollo de páginas web bien hechas</h1>
+              <h1>Desarrollo de páginas web bien hechas</h1>
               <br/>
               <p>¿Con qué tipo de proyecto necesitas ayuda?</p>
-                <div class="links-container p-animated">
+                <div class="links-container">
                   <div class="projects">
                     <a id="webdev" href="#websites"><h2>Desarrollo de sitios web</h2></a>
                     <img class="project-icon" src="images/world-wide-web.svg" alt="">
@@ -92,8 +92,8 @@
         <div class="slide slider2">
           <div class="slide-content">
             <div class="container">
-              <h1 class="title-animated">¿No estas seguro de que es lo que necesitas o como aprovechar la publicidad en internet?</h1>
-              <div class="links-container p-animated">
+              <h1 class="">¿No estas seguro de que es lo que necesitas o como aprovechar la publicidad en internet?</h1>
+              <div class="links-container">
                 <a href="#">Aprender más</a>
               </div>
             </div>
@@ -103,8 +103,8 @@
         <div class="slide slider3">
           <div class="slide-content">
             <div class="container">
-              <h1 class="title-animated">Hola soy César</h1>
-              <p class="p-animated">Soy un desarrollador web. Disfruto construyendo todo, desde sitios para pequeñas empresas hasta aplicaciones web interactivas enriquecidas. Si eres una empresa que busca presencia en la web o un empleador que busca contratar personal, puede ponerse en contacto conmigo aquí.</p>
+              <h1>Hola soy César</h1>
+              <p>Soy un desarrollador web. Disfruto construyendo todo, desde sitios para pequeñas empresas hasta aplicaciones web interactivas enriquecidas. Si eres una empresa que busca presencia en la web o un empleador que busca contratar personal, puede ponerse en contacto conmigo aquí.</p>
             </div>
           </div>
         </div>
@@ -156,25 +156,37 @@
     <section id="main-content">
 
       <div id="websites">
-        <p class="sub-titles">Adquiere clientes potenciales a través de una página web…</p>
-        <p>“¿Quiero comercializar mi empresa en internet, pero ¿Cómo empiezo, cómo lo hago?” Un cliente me preguntó recientemente. Bueno… lo primero que respondí fue una página web para empezar.</p>
-        <p>Una página web es la "base de operaciones" de tu campaña de marketing online.</p>
-        <h3 class="sub-titles">una página web bien hecha que atraiga clientes potenciales.</h3>
+        <p class="sub-titles">Adquiere clientes potenciales a través de una página web…</p></br>
+        <p>“¿Quiero comercializar mi empresa en internet, pero ¿Cómo empiezo, cómo lo hago?” Un cliente me preguntó recientemente.</br></br>
+        Bueno… lo primero que respondí fue una página web para empezar.</p></br>
+        <p>Una página web es la "base de operaciones" de tu campaña de marketing online.</p></br>
+        <p>Una página web le da el privilegio a tu negocio de tener una imagen de autoridad ante tu competencia, ademas de la capacidad de exponer tus servicios a una gran cantidad de clientes potenciales.</p></br></br>
+        <div class="links-container">
+          <a id="secondary_btn" href="#">Más información</a>
+        </div></br></br>
       </div>
   
       <div id="seo-content">
         <h3 class="sub-titles">Posicionamiento orgánico</h3>
-        <p>Si tu ya tienes una página web el contenido de tu página (con una buena optimización) es el encargado de decirle al buscador (google, yahoo, etc...) para que búsquedas mostrar tu página web.</p>
-        <p>A esto se le llama posicionamiento orgánico, ayudar a los buscadores a comprender tu página para que "gratuitamente" la página de tu empresa o negocio este en las primeras posiciones.</p>
-        <p>¿Sabias que al día en un minuto se realizan 4.497.420 de búsquedas en Google? Si estas interesado en hacer que la página web de tu negocio o empresa aproveche estas búsquedas en Google, puedes ponerte en contacto conmigo y hablar de tu proyecto.</p>
+        <p>Si tu ya tienes una página web el contenido de tu página (con una buena optimización) es el encargado de decirle al buscador (google, yahoo, etc...) para que búsquedas mostrar tu página web.</p></br>
+        <p>A esto se le llama <em>posicionamiento orgánico</em>.</br></br> 
+        Ayudar a los buscadores a comprender tu página para que "gratuitamente" la página de tu empresa o negocio este en las primeras posiciones.</p></br>
+        <p>¿Sabias que al día en un minuto se realizan 4.497.420 de búsquedas en Google?</br></br> 
+        Si estas interesado en hacer que la página web de tu negocio o empresa aproveche estas búsquedas en Google, puedes ponerte en contacto conmigo y hablar de tu proyecto.</p></br>
+        <div class="links-container">
+          <a id="secondary_btn" href="#">Más información</a>
+        </div></br></br>
       </div>
   
       <div id="ads">
-        <p class="sub-titles">Aumenta el tráfico y ventas de tu sitio web.</p>
-        <p>A diferencia de la optimización en buscadores de una página web, utilizar los servicios de Google Adwords (anuncios pagados de Google) aumenta el tráfico rápidamente, esto es así porque tu página aparece de inmediato en la primera posición.</p>
-        <p>Tan buena como es la optimización para aumentar el tráfico de tu web, esta estrategia toma su tiempo, por otro lado la acción de Google AdWords es instantánea.</p>
-        <p>Esto lo convierte en una buena opción para ofertas y promociones de tiempo limitado, aunque hay mucho más beneficios</p>
-        <h3 class="sub-titles">Algunos beneficios de campañas de Google AdWords.</h3> 
+        <h3 class="sub-titles">Campañas de Google AdWords.</h3>
+        <p>A diferencia de la optimización en buscadores de una página web, utilizar los servicios de Google Adwords (anuncios pagados de Google) aumenta el tráfico rápidamente, esto es así porque tu página aparece de inmediato en la primera posición.</p></br>
+        <p>Tan buena como es la optimización para aumentar el tráfico de tu web, esta estrategia toma su tiempo, por otro lado la acción de Google AdWords es instantánea.</p></br>
+        <p>Esto lo convierte en una buena opción para ofertas y promociones de tiempo limitado, aunque hay mucho más beneficios</p></br>
+        <p>Tu anuncion también se muestran en la red socios, que son otros sitios web que tienen la misma orientación que tus clientes potenciales.</p>
+        <div class="links-container">
+          <a id="secondary_btn" href="#">Más información</a>
+        </div></br></br> 
       </div>
 
     </section>
