making improvements for advertise

--- a/index.html
+++ b/index.html
@@ -62,29 +62,19 @@
   <main>
 
     <section id="welcome-section">
-      <div id="arrow-left" class="arrow"></div>
+      <!--<div id="arrow-left" class="arrow"></div>-->
 
       <div id="slider">
         <div class="slide slider1">
           <div class="slide-content">
-            <div class="container">
-              <h1>Desarrollo de páginas web bien hechas</h1>
-              <br/>
-              <p>¿Con qué tipo de proyecto necesitas ayuda?</p>
-                <div class="links-container">
-                  <div class="projects">
-                    <a id="webdev" href="#websites"><h2>Desarrollo de sitios web</h2></a>
-                    <img class="project-icon" src="images/world-wide-web.svg" alt="">
-                  </div>
-                  <div class="projects">
-                    <a id="seo" href="#seo-content"><h2>Optimización de busquedas</h2></a>
-                    <img class="project-icon" src="images/seo.svg" alt="">
-                  </div>
-                  <div class="projects">
-                    <a id="ads-content" href="#ads"><h2>Publicidad por internet</h2></a>
-                    <img class="project-icon" src="images/ads.svg" alt="">
-                  </div>
-                </div>
+            <div class="container principal">
+              <p class="title">Hola soy César</p></br>
+              <p>Un apasionado desarrollador de software Full Stack 🚀</br> Con experiencia en el diseño y creación de aplicaciones web y aplicaciones móviles (PWA).</br> A si que si tienes en mente algún tipo de aplicación web para tu negocio, puede contactarme desde este increíble sitio web.</p></br>
+              <p class="questions">¿Quieres ver los trabajos que he hecho?</p>
+              <div class="btns">
+                <span class="arrow-left">Si</span>
+                <span class="arrow-right">No</span>
+              </div>
             </div>
           </div>
         </div>
@@ -92,9 +82,14 @@
         <div class="slide slider2">
           <div class="slide-content">
             <div class="container">
-              <h1 class="">¿No estas seguro de que es lo que necesitas o como aprovechar la publicidad en internet?</h1>
+              <p class="title">¿Cómo se ve para ti el creciente número de oportunidades en internet?</p></br>
+              <p>si eres dueño de negocio, emprendedor, prestador de servicios o incluso una gran compañia, las oportunidades para atraer nuevos clientes a través de internet son infinitas.</br>
+              Si deseas aprender más sobre como esto es posible para ti descarga el siguiente PDF.</p>
               <div class="links-container">
-                <a href="#">Aprender más</a>
+                <div class="btns">
+                  <a class="arrow-left">Atrás</a>
+                  <a href="docs/beneficios-de-una-web.pdf" download class="arrow-right">Descargar PDF</a>
+                </div>
               </div>
             </div>
           </div>
@@ -103,17 +98,76 @@
         <div class="slide slider3">
           <div class="slide-content">
             <div class="container">
-              <h1>Hola soy César</h1>
-              <p>Soy un desarrollador web. Disfruto construyendo todo, desde sitios para pequeñas empresas hasta aplicaciones web interactivas enriquecidas. Si eres una empresa que busca presencia en la web o un empleador que busca contratar personal, puede ponerse en contacto conmigo aquí.</p>
+              <section id="my-works" class="slideshow">
+                <p class="title-works">Mis ultimos trabajos</p>
+                <div class="content">
+                  <div class="content-carrousel">
+                    <figure class="shadow">
+                      <a target="_blank" href="https://cesar-rdgz.github.io/Etch-A-Sketch/"><img class="work-image" src="images/etch-a-sketch.jpg" alt=""></a>
+                      <figcaption>
+                        Proyecto Javscript
+                      </figcaption>
+                    </figure>
+                    <figure class="shadow">
+                      <a target="_blank" href="https://pmpradio.net"><img class="work-image" class="work-image" src="images/project-online-radio.jpg" alt=""></a>
+                      <figcaption>
+                        Radio Online
+                      </figcaption>
+                    </figure>
+                    <figure class="shadow">
+                      <a target="_blank" href="http://refaccionaria-delcentro.com.mx/"><img class="work-image" src="images/refaccionaria.jpg" alt=""></a>
+                      <figcaption>
+                        Negocio Local
+                      </figcaption>
+                    </figure>
+                    <figure class="shadow">
+                      <a target="_blank" href="https://cesar-rdgz.github.io/Rock-Paper-Scissors/new_rock_paper_scissors_game/"><img class="work-image" src="images/piedra-papel-tijera.jpg" alt=""></a>
+                      <figcaption>
+                        piedra, papel o tijera
+                      </figcaption>
+                    </figure>
+                    <figure class="shadow">
+                      <a target="_blank" href="https://capphenix.com"><img class="work-image" src="images/virtual-school.jpg" alt=""></a>
+                      <figcaption>
+                        Sitio estudiantil
+                      </figcaption>
+                    </figure>
+                  </div>                  
+                </div>
+              </section>
+              
+              <p class="title">Lo que hago</p>
+              <ul class="list-expertise">
+                <li>
+                  <span>⚡ </span> 
+                  <p> sitios web orientados al marketing y la venta.</p>
+                </li>
+                <li>
+                  <span>⚡ </span> 
+                  <p> Desarrollo interfaces de usuari altamente interactivas para tus aplicaciones web y móviles.</p>
+                </li>
+                <li>
+                  <span>⚡ </span> 
+                  <p> Aplicaciones web progresivas (PWA)</p>
+                </li>
+                <li>
+                  <span>⚡ </span> 
+                  <p> Integraciones de servicios de terceros como firebase y AWS.</p>
+                </li>
+              </ul>
+              <div class="contact-me-now">
+                <p class="sub-titles">Contactame para discutir un proyecto o discutir que le vendria bien a tu negocio.</p>
+                <i class="fas fa-hand-point-down hand-down"></i>
+              </div>
             </div>
           </div>
         </div>
       </div>
 
-      <div id="arrow-right" class="arrow"></div>
+      <!--<div id="arrow-right" class="arrow"></div>-->
     </section>
 
-    <section id="my-works" class="slideshow">
+    <!--<section id="my-works" class="slideshow">
       <p class="title-works">Mis ultimos trabajos</p>
       <div class="content">
         <div class="content-carrousel">
@@ -149,11 +203,11 @@
           </figure>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <!-- main content Start -->
 
-    <section id="main-content">
+    <!--<section id="main-content">
 
       <div id="websites">
         <p class="sub-titles">Adquiere clientes potenciales a través de una página web…</p></br>
@@ -189,7 +243,7 @@
         </div></br></br> 
       </div>
 
-    </section>
+    </section>-->
 
   </main>
   <!-- main section end -->
