--- a/portfolio.html
+++ b/portfolio.html
@@ -69,6 +69,7 @@
                 <div class="slide-content">
                 <div class="container principal accor">
                     <div class="accordion" id="accordionExample">
+                      <p class="text-white">Bienvenido a mi portafolio</p>
                         <div class="accordion-item">
                             <h2 class="accordion-header" id="headingOne">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
