--- a/index.html
+++ b/index.html
@@ -1,273 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147234470-5"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-147234470-5');
-  </script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-
-  <!-- setup meta tags -->
-
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="images/coding.svg">
-  <title>Sitios para pequeñas empresas hasta aplicaciones web interactivas enriquecidas.</title>
-
-  <!-- setup meta tags -->
-
-  <!-- style css and icon tags -->
-
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-
-  <!-- animate CDN -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
-  
-  <!-- style css and icon tags -->
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome to my Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-  <!-- header and navbar section  start -->
-  <header>
-    <div class="header-wrapper">
-      <div class="logo">
-        <a href="/"><img src="images/white-coding-logo.svg" alt=""></a>
-      </div>
-      <input id="toggle-menu" type="checkbox">
-      <label for="toggle-menu"><i class="fas fa-bars"></i></label>
-      <nav id="navbar">
-        <ul>
-          <li><a href="#welcome-section">Sobre mi</a></li>
-          <li><a id="showWorks" href="#my-works">Trabajos</a></li>
-        </ul>
-        <ul>
-          <li><a id="contact-bottom" href="#contact">Contactame</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-  <!-- header and navbar section end -->
-
-  <!-- main section start -->
-  <main>
-
-    <section id="welcome-section">
-      <!--<div id="arrow-left" class="arrow"></div>-->
-
-      <div id="slider">
-        <div class="slide slider1">
-          <div class="slide-content">
-            <div class="container principal">
-              <p class="title">Hola soy César</p></br>
-              <p>Un apasionado desarrollador de software Full Stack 🚀</br> Con experiencia en el diseño y creación de aplicaciones web y aplicaciones móviles (PWA).</br> A si que si tienes en mente algún tipo de aplicación web para tu negocio, puede contactarme desde este increíble sitio web.</p></br>
-              <p class="questions">¿Quieres ver los trabajos que he hecho?</p>
-              <div class="btns">
-                <span class="arrow-left">Si</span>
-                <span class="arrow-right">No</span>
-              </div>
-            </div>
-          </div>
+    <header>
+        <div class="nav-container">
+            <label for="menu-check">
+                <i class="fas fa-bars"></i>
+            </label>
+            <input type="checkbox" id="menu-check">
+            <a href="https://cesarwebdev.com/"><img src="img/icon.png" alt=""></a>
+            <nav>
+                <ul>
+                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#">Skill Set</a></li>
+                    <li><a href="#">Experience</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
         </div>
+    </header>
+    <main>
+        <div class="container">
+            <p class="title">Hi I'm César <span class="greeting-hand">👋</span></p>
+            <div class="line-decoration"></div>
+            <p class="small-text">Full-Stack JavaScript Developer</p>
 
-        <div class="slide slider2">
-          <div class="slide-content">
-            <div class="container">
-              <p class="title">¿Cómo se ve para ti el creciente número de oportunidades en internet?</p></br>
-              <p>si eres dueño de negocio, emprendedor, prestador de servicios o incluso una gran compañia, las oportunidades para atraer nuevos clientes a través de internet son infinitas.</br>
-              Si deseas aprender más sobre como esto es posible para ti descarga el siguiente PDF.</p>
-              <div class="links-container">
-                <div class="btns">
-                  <a class="arrow-left">Atrás</a>
-                  <a href="docs/beneficios-de-una-web.pdf" download class="arrow-right">Descargar PDF</a>
+            <div id="portfolio">
+                <p class="title" align="center">Portfolio</p>
+                <div class="line-decoration"></div>
+               <div class="works-container">
+                    <!-- 
+                        renderProjects(); 
+                    -->
+               </div>            
+            </div>
+
+            <div class="window-view">
+                <!--
+                    renderViewContent();
+                -->
+            </div>
+
+            <div class="skillset">
+                <p class="title" align="center">SkillSet</p>
+                <div class="line-decoration"></div>
+                <div class="skills-icons-con">
+                    <div class="icon">
+                        <img src="img/html.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/css.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/js.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/git.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/jquery.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/node.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/mongo.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/bash.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/firebase.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/git.svg" alt="html">
+                    </div>
+                    <div class="icon">
+                        <img src="img/bootstrap.svg" alt="html">
+                    </div>
                 </div>
-              </div>
             </div>
-          </div>
         </div>
+        <div class="contact">
+            <p class="title" align="center">Contact</p>
+            <div class="line-decoration"></div>
 
-        <div class="slide slider3">
-          <div class="slide-content">
-            <div class="container">
-              <section id="my-works" class="slideshow">
-                <p class="title-works">Mis ultimos trabajos</p>
-                <div class="content">
-                  <div class="content-carrousel">
-                    <figure class="shadow">
-                      <a target="_blank" href="https://cesar-rdgz.github.io/Etch-A-Sketch/"><img class="work-image" src="images/etch-a-sketch.jpg" alt=""></a>
-                      <figcaption>
-                        Proyecto Javscript
-                      </figcaption>
-                    </figure>
-                    <figure class="shadow">
-                      <a target="_blank" href="https://pmpradio.net"><img class="work-image" class="work-image" src="images/project-online-radio.jpg" alt=""></a>
-                      <figcaption>
-                        Radio Online
-                      </figcaption>
-                    </figure>
-                    <figure class="shadow">
-                      <a target="_blank" href="http://refaccionaria-delcentro.com.mx/"><img class="work-image" src="images/refaccionaria.jpg" alt=""></a>
-                      <figcaption>
-                        Negocio Local
-                      </figcaption>
-                    </figure>
-                    <figure class="shadow">
-                      <a target="_blank" href="https://cesar-rdgz.github.io/Rock-Paper-Scissors/new_rock_paper_scissors_game/"><img class="work-image" src="images/piedra-papel-tijera.jpg" alt=""></a>
-                      <figcaption>
-                        piedra, papel o tijera
-                      </figcaption>
-                    </figure>
-                    <figure class="shadow">
-                      <a target="_blank" href="https://capphenix.com"><img class="work-image" src="images/virtual-school.jpg" alt=""></a>
-                      <figcaption>
-                        Sitio estudiantil
-                      </figcaption>
-                    </figure>
-                  </div>                  
+            <form>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="name" placeholder="name@example.com">
+                    <label for="name">Name</label>
                 </div>
-              </section>
-              
-              <p class="title">Lo que hago</p>
-              <ul class="list-expertise">
-                <li>
-                  <span>⚡ </span> 
-                  <p> sitios web orientados al marketing y la venta.</p>
-                </li>
-                <li>
-                  <span>⚡ </span> 
-                  <p> Desarrollo interfaces de usuari altamente interactivas para tus aplicaciones web y móviles.</p>
-                </li>
-                <li>
-                  <span>⚡ </span> 
-                  <p> Aplicaciones web progresivas (PWA)</p>
-                </li>
-                <li>
-                  <span>⚡ </span> 
-                  <p> Integraciones de servicios de terceros como firebase y AWS.</p>
-                </li>
-              </ul>
-              <div class="contact-me-now">
-                <p class="sub-titles">Contactame para discutir un proyecto o discutir que le vendria bien a tu negocio.</p>
-                <i class="fas fa-hand-point-down hand-down"></i>
-              </div>
-            </div>
-          </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                    <label for="email">Email</label>
+                </div>
+                <div class="form-floating mb-3">
+                    <input type="email" class="form-control" id="phone" placeholder="name@example.com">
+                    <label for="phone">Phone</label>
+                </div>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Leave a comment here" id="comments"></textarea>
+                    <label for="comments">Comments</label>
+                </div>
+                <div class="mb-3 form-check">
+                  <input type="checkbox" class="form-check-input" id="checker">
+                  <label class="form-check-label" for="checker">Check me out</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
         </div>
-      </div>
+    </main>
+    <footer>
 
-      <!--<div id="arrow-right" class="arrow"></div>-->
-    </section>
+    </footer>
 
-    <!--<section id="my-works" class="slideshow">
-      <p class="title-works">Mis ultimos trabajos</p>
-      <div class="content">
-        <div class="content-carrousel">
-          <figure class="shadow">
-            <a target="_blank" href="https://cesar-rdgz.github.io/Etch-A-Sketch/"><img class="work-image" src="images/etch-a-sketch.jpg" alt=""></a>
-            <figcaption>
-              Proyecto Javscript
-            </figcaption>
-          </figure>
-          <figure class="shadow">
-            <a target="_blank" href="https://pmpradio.net"><img class="work-image" class="work-image" src="images/project-online-radio.jpg" alt=""></a>
-            <figcaption>
-              Radio Online
-            </figcaption>
-          </figure>
-          <figure class="shadow">
-            <a target="_blank" href="http://refaccionaria-delcentro.com.mx/"><img class="work-image" src="images/refaccionaria.jpg" alt=""></a>
-            <figcaption>
-              Negocio Local
-            </figcaption>
-          </figure>
-          <figure class="shadow">
-            <a target="_blank" href="https://cesar-rdgz.github.io/Rock-Paper-Scissors/new_rock_paper_scissors_game/"><img class="work-image" src="images/piedra-papel-tijera.jpg" alt=""></a>
-            <figcaption>
-              piedra, papel o tijera
-            </figcaption>
-          </figure>
-          <figure class="shadow">
-            <a target="_blank" href="https://capphenix.com"><img class="work-image" src="images/virtual-school.jpg" alt=""></a>
-            <figcaption>
-              Sitio estudiantil
-            </figcaption>
-          </figure>
-        </div>
-      </div>
-    </section>-->
-
-    <!-- main content Start -->
-
-    <!--<section id="main-content">
-
-      <div id="websites">
-        <p class="sub-titles">Adquiere clientes potenciales a través de una página web…</p></br>
-        <p>“¿Quiero comercializar mi empresa en internet, pero ¿Cómo empiezo, cómo lo hago?” Un cliente me preguntó recientemente.</br></br>
-        Bueno… lo primero que respondí fue una página web para empezar.</p></br>
-        <p>Una página web es la "base de operaciones" de tu campaña de marketing online.</p></br>
-        <p>Una página web le da el privilegio a tu negocio de tener una imagen de autoridad ante tu competencia, ademas de la capacidad de exponer tus servicios a una gran cantidad de clientes potenciales.</p></br></br>
-        <div class="links-container">
-          <a id="secondary_btn" href="#">Más información</a>
-        </div></br></br>
-      </div>
-  
-      <div id="seo-content">
-        <h3 class="sub-titles">Posicionamiento orgánico</h3>
-        <p>Si tu ya tienes una página web el contenido de tu página (con una buena optimización) es el encargado de decirle al buscador (google, yahoo, etc...) para que búsquedas mostrar tu página web.</p></br>
-        <p>A esto se le llama <em>posicionamiento orgánico</em>.</br></br> 
-        Ayudar a los buscadores a comprender tu página para que "gratuitamente" la página de tu empresa o negocio este en las primeras posiciones.</p></br>
-        <p>¿Sabias que al día en un minuto se realizan 4.497.420 de búsquedas en Google?</br></br> 
-        Si estas interesado en hacer que la página web de tu negocio o empresa aproveche estas búsquedas en Google, puedes ponerte en contacto conmigo y hablar de tu proyecto.</p></br>
-        <div class="links-container">
-          <a id="secondary_btn" href="#">Más información</a>
-        </div></br></br>
-      </div>
-  
-      <div id="ads">
-        <h3 class="sub-titles">Campañas de Google AdWords.</h3>
-        <p>A diferencia de la optimización en buscadores de una página web, utilizar los servicios de Google Adwords (anuncios pagados de Google) aumenta el tráfico rápidamente, esto es así porque tu página aparece de inmediato en la primera posición.</p></br>
-        <p>Tan buena como es la optimización para aumentar el tráfico de tu web, esta estrategia toma su tiempo, por otro lado la acción de Google AdWords es instantánea.</p></br>
-        <p>Esto lo convierte en una buena opción para ofertas y promociones de tiempo limitado, aunque hay mucho más beneficios</p></br>
-        <p>Tu anuncion también se muestran en la red socios, que son otros sitios web que tienen la misma orientación que tus clientes potenciales.</p>
-        <div class="links-container">
-          <a id="secondary_btn" href="#">Más información</a>
-        </div></br></br> 
-      </div>
-
-    </section>-->
-
-  </main>
-  <!-- main section end -->
-
-  <!-- footer section start -->
-  <footer id="footer">
-    <section id="contact">
-      <div class="links">
-        <a class="icons" target="_blank" href="https://www.facebook.com/profile.php?id=100017551629934"><i class="fab fa-facebook-f"></i>Facebook</a>
-        <a id="profile-link" target="_blank" class="icons" href="https://github.com/Cesar-rdgz" target="_blank"><i class="fab fa-github-square"></i>GitHub</a>
-        <a class="icons" href="tel:+524371045651"><i class="fas fa-phone-volume"></i>Llamame</a>
-        <a class="icons" href="tel:+524371045651"><i class="fab fa-whatsapp"></i>whatsapp</a>
-        <a class="icons" target="_blank" href="https://www.freecodecamp.org/cesar-rodriguez"><i class="fab fa-free-code-camp"></i>FreeCodeCamp</a>
-      </div>
-    </section>
-    
-    <p>
-      &copy; Created for
-      <a href="https://github.com/Cesar-rdgz">Cesar Rodriguez</a>
-    </p>
-  </footer>
-  <!-- footer section start -->
-  <!-- Js tags -->
-  <script src="js/main.js"></script>
-  <!-- Js tags -->
+    <script src="js/app.js"></script>
 </body>
 </html>
