adding easy contact buttons

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <a href="https://cesarwebdev.com/"><img src="img/icon.png" alt=""></a>
             <nav>
                 <ul>
-                    <li><a href="#">Portfolio</a></li>
-                    <li><a href="#">Skill Set</a></li>
-                    <li><a href="#">Experience</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#skillset">Skill Set</a></li>
+                    <li><a href="#skillset">Experience</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -30,7 +30,7 @@
         <div class="container">
             <p class="title">Hi I'm César <span class="greeting-hand">👋</span></p>
             <div class="line-decoration"></div>
-            <p class="small-text">Full-Stack JavaScript Developer</p>
+            <p class="small-text">Web Developer</p>
 
             <div id="portfolio">
                 <p class="title" align="center">Portfolio</p>
@@ -48,7 +48,7 @@
                 -->
             </div>
 
-            <div class="skillset">
+            <div id="skillset">
                 <p class="title" align="center">SkillSet</p>
                 <div class="line-decoration"></div>
                 <div class="skills-icons-con">
@@ -86,13 +86,20 @@
                         <img src="img/bootstrap.svg" alt="html">
                     </div>
                 </div>
+                <p class="title" align="center">Download my cv</p>
+                <a href="https://drive.google.com/file/d/10N57GzrRpGNlyCqhxTE4o5dj0z9DXlbX/view?usp=sharing" class="cv">My cv</a>
             </div>
         </div>
-        <div class="contact">
+        <div id="contact">
             <p class="title" align="center">Contact</p>
             <div class="line-decoration"></div>
 
-            <form>
+            <div class="num-and-whats">
+                <a href="https://wa.me/524371045651" class="whats">Whatsapp <i class="fab fa-whatsapp"></i></a>
+                <a href="tel:524371045651" class="tel">Phone <i class="fas fa-phone"></i></a>
+            </div>
+
+            <!-- <form>
                 <div class="form-floating mb-3">
                     <input type="email" class="form-control" id="name" placeholder="name@example.com">
                     <label for="name">Name</label>
@@ -114,7 +121,7 @@
                   <label class="form-check-label" for="checker">Check me out</label>
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
+            </form> -->
         </div>
     </main>
     <footer>
